sửa lại cú pháp java 8